--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
