--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.2.13",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.507.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-locomotive-scroll": "^0.2.2",
